# sample-mingw-dll

./: .gitignore  CMakeLists.txt  CMakeSettings.json  example.cpp  example.hpp  testit.cpp
